--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "frontend/"
   publish = "dist/"
-  command = "yarn generate"
+  command = "yarn build"
 
 [template.environment]
   API_URL = "API_URL"
