--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VUE_APP_STRAPI_API_URL=http://localhost:1337  
-VUE_APP_GRAPHQL_URL="http://localhost:1337/graphql" 
+VUE_APP_GRAPHQL_URL="https://hanssbecerra.netlify.app/graphql" 
